src/App.css
@import url('https://fonts.googleapis.com/css?family=Fredoka+One|Nunito:200,300,400&display=swap');
@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Miriam+Libre&display=swap');

.App {
  /* text-align: center; */
  /* background-color:#80bdbf; */
  background-color:#80bab6;
  font-family: 'Miriam Libre', sans-serif;
}

.App-header {
  padding-top: 1em;
  display: flex;
  flex-direction: column;
  align-items: center;
  /* font-size: 2.5em; */
  margin-left: 1em;
  margin-right: 1em;
  text-align: center;
}

.App-body {
  padding-left: 2em;
  padding-right: 2em;
}

.App-subhead {
  margin-left: 5em;
  margin-right: 8em;
  display: flex;
  justify-content: space-between;
}

h1 {
  font-family: 'Bungee Shade', cursive;
  /* font-family: 'Fredoka One', cursive; */
  /* color: #f7f765; */
  /* color: #F5640A; */
  color: #c94e02;
  letter-spacing: 5px;
  font-size: 3em;
  margin: 10px;
}

h3 {
  /* font-family: 'Nunito', sans-serif; */
  font-family: 'Miriam Libre', sans-serif;
  color: #183C4A;
  font-size: 1.75em;
  font-weight: 400;
  letter-spacing: 3px;
  margin: 10px;
}

